--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@
 aiogram==2.25.2
 requests==2.32.3
 emoji==2.14.0
-pillow==10.4.0
 aiocron==1.8.0
 twisted==24.7.0
 autobahn==24.4.2
 pyopenssl==24.2.1
 service_identity==24.1.0
+websockets==13.1.0
