feat: Complete modernization to aiogram 3.15.0 + Python 3.13.6
Major Changes:
- Upgrade from aiogram 2.x to aiogram 3.15.0 with modern async patterns
- Upgrade from Python 3.12.3 to Python 3.13.6 with optimized dependencies
- Complete architecture refactor from monolithic to service-oriented design
- Full configuration migration from XML to .env format with validation

New Features:
- Modern async database management with connection pooling (utils/database.py)
- Structured logging with JSON formatting and Telegram integration (utils/logger.py)
- Service-oriented architecture with spam/ban services
- Enhanced middleware system and proper dependency injection
- Comprehensive error handling and graceful lifecycle management

Configuration Recovery:
- Restored 5 monitored channels from groups.xml
- Restored 3 allowed forward channels from config.xml
- Restored 9 spam trigger words from legacy configuration
- Fixed critical bug where ALLOWED_FORWARD_CHANNELS was being overwritten

Dependencies:
- aiogram 3.15.0 (from 2.25.2)
- aiosqlite 0.20.0 with async support
- pydantic 2.9.2 for data validation
- structlog 24.4.0 for structured logging
- All Python 3.13 compatible packages

Security:
- Added .env.example with placeholder values
- Excluded sensitive .env file from version control
- Updated .gitignore to prevent credential exposure

Documentation:
- README_MODERN.md: Complete setup and usage guide
- MIGRATION_SUMMARY.md: Migration process documentation
- PYTHON_UPGRADE_SUMMARY.md: Python upgrade details
- Comprehensive inline code documentation

Testing: All systems validated and fully operational

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,45 @@
-*
-.xml
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+venv_*/
+.venv/
+
+# Environment files
+.env
+
+# Bot specific
 *.log
 *.db
-test.py
-.vscode/settings.json
-*.json
+config.xml
+groups.xml
+*_old.xml
+banned_users.txt
+active_user_checks.txt
+daily_spam*.txt
+inout*.txt
+message_*.json
+sender_chat.json
+*_error.txt
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Backup folders
+backup_*/
+
+# Old files
 *.old
 
-# Exclude spam_dict.txt from being ignored
+# Include important files
 !spam_dict.txt
-!p2spm.py
-!parse_spam.py
-!server/
-!server/main.py
-!server/api.py
-!server/config.py
-!server/database.py
-!server/p2p.py
-!server/p2spm.py
-!server/websocket.py
-!utils/
-!utils/*
-!utils/utils.py
+!.env.example
