--- a/requirements_modern.txt
+++ b/requirements_modern.txt
@@ -37,3 +37,17 @@ pytest-asyncio==0.24.0
 
 # Performance monitoring
 psutil==6.1.0
+
+# Additional dependencies for complete functionality
+# XML parsing and file operations
+lxml>=4.9.0,<5.0
+xmltodict>=0.13.0
+
+# Date and time utilities
+python-dateutil>=2.8.2
+
+# Environment variable management
+python-dotenv>=1.0.0
+
+# Async task management
+asyncio-throttle>=1.0.2
