--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-# Requires Python 3.10
-aiogram==2.25.2
+# Requires Python 3.12+
+aiogram==3.22.0
+aiohttp>=3.9.0
 requests==2.32.3
 emoji==2.14.0
 aiocron==1.8.0
@@ -8,3 +9,4 @@ autobahn==24.4.2
 pyopenssl==24.2.1
 service_identity==24.1.0
 websockets==13.1.0
+pydantic>=2.0.0
