Move established user settings to .env file (MIN_MESSAGES=10, FIRST_MSG_DAYS=90)

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,9 @@ ALLOWED_FORWARD_CHANNELS=[{"id":-1001579332089,"name":"podyshat"},{"id":-1002133
 
 # ===== P2P SERVER =====
 P2P_SERVER_URL=http://localhost:8081
+
+# ===== ESTABLISHED USER DETECTION =====
+# Skip missed join banner for users meeting these criteria:
+# (messages >= MIN_MESSAGES AND first_msg_age >= FIRST_MSG_DAYS) OR marked as legit
+ESTABLISHED_USER_MIN_MESSAGES=10
+ESTABLISHED_USER_FIRST_MSG_DAYS=90
