Move HIGH_USER_ID_THRESHOLD to .env (default 8400000000)

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,7 @@ P2P_SERVER_URL=http://localhost:8081
 # (messages >= MIN_MESSAGES AND first_msg_age >= FIRST_MSG_DAYS) OR marked as legit
 ESTABLISHED_USER_MIN_MESSAGES=10
 ESTABLISHED_USER_FIRST_MSG_DAYS=90
+
+# ===== NEW ACCOUNT DETECTION =====
+# User IDs above this threshold are flagged as very new accounts
+HIGH_USER_ID_THRESHOLD=8400000000
