feat: configurable night hours + remove geographic references
- Add NIGHT_START_HOUR and NIGHT_END_HOUR to .env config (default 1-6 AM)
- Update message_sent_during_night() to use configurable hours
- Add night spam detection for forwarded channel + media + night time
- Add send_json_to_technolog() helper for JSON logging to TECHNO_IN
- Remove all geographic references from comments and docs
- Update .env.example with generic placeholders

--- a/.env.example
+++ b/.env.example
@@ -46,7 +46,7 @@ MONITORED_GROUP_NAMES=technobot_log,Test public forum with topics,Test group 207
 
 # ===== ALLOWED FORWARD CHANNELS (JSON format) =====
 # Channels from which forwarded messages are excluded from autoreport
-ALLOWED_FORWARD_CHANNELS=[{"id":-1001579332089,"name":"podyshat"},{"id":-1002133910148,"name":"zov_kosatki"},{"id":-1002243952356,"name":"mauritiuspalych"},{"id":-1001843786479,"name":"whales_mauritius"},{"id":-1001620194988,"name":"freedivingmauritius"},{"id":-1001359927097,"name":"elena_mauritius"},{"id":-1001516708117,"name":"svetoshkola"},{"id":-1001248004095,"name":"mauritiusestate"},{"id":-1001673404457,"name":"rusembmauritius"},{"id":-1001805126366,"name":"mauritius_kuzhel"},{"id":-1001900619969,"name":"Kitymavrikii"},{"id":-1002071384763,"name":"RussianOrthodoxChurchMauritius"},{"id":-1002077751127,"name":"MauritiusRus"},{"id":-1002465334201,"name":"ScamDeductive"},{"id":-1002156675211,"name":"nuxmur"},{"id":-1002206964634,"name":"aileadhunter"},{"id":-1001966092673,"name":"mauritiuswakepark"},{"id":-1001620194988,"name":"waterspacefreediving"},{"id":-1001964317695,"name":"livemusicmauritius"},{"id":-1001429599043,"name":"KGBkite"}]
+ALLOWED_FORWARD_CHANNELS=[]
 
 # ===== P2P SERVER =====
 P2P_SERVER_URL=http://localhost:8081
@@ -60,3 +60,9 @@ ESTABLISHED_USER_FIRST_MSG_DAYS=90
 # ===== NEW ACCOUNT DETECTION =====
 # User IDs above this threshold are flagged as very new accounts
 HIGH_USER_ID_THRESHOLD=8400000000
+
+# ===== NIGHT TIME DETECTION =====
+# Hours during which messages are flagged as "night" (for spam detection)
+# Uses local timezone (set via TZ env var). Default: 1-6 AM
+NIGHT_START_HOUR=1
+NIGHT_END_HOUR=6
