feat: add minute precision to night time detection
- Add NIGHT_START_MINUTE and NIGHT_END_MINUTE config vars (default: 0)
- Update message_sent_during_night() to compare total minutes
- Example: NIGHT_START_HOUR=1 NIGHT_START_MINUTE=30 for 1:30 AM

--- a/.env.example
+++ b/.env.example
@@ -62,7 +62,9 @@ ESTABLISHED_USER_FIRST_MSG_DAYS=90
 HIGH_USER_ID_THRESHOLD=8400000000
 
 # ===== NIGHT TIME DETECTION =====
-# Hours during which messages are flagged as "night" (for spam detection)
-# Uses local timezone (set via TZ env var). Default: 1-6 AM
+# Hours/minutes during which messages are flagged as "night" (for spam detection)
+# Uses local timezone (set via TZ env var). Default: 1:00 AM to 6:00 AM
 NIGHT_START_HOUR=1
+NIGHT_START_MINUTE=0
 NIGHT_END_HOUR=6
+NIGHT_END_MINUTE=0
