Add comprehensive deployment documentation
- Quick deployment guide using ./deploy_update.sh
- Manual deployment steps for advanced users
- Monitoring and troubleshooting commands
- Rollback instructions if needed
- Summary of changes in this update

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ test.py
 # Exclude spam_dict.txt from being ignored
 !spam_dict.txt
 !CHANGELOG.md
+!DEPLOYMENT.md
+!README.md
+!requirements.txt
+!main.py
 !.github/
 !.github/*
 !p2spm.py
